# Econometrics

./: .econ_project  .gitignore  AGENT.md  CLAUDE.md  README.md  Style guides.txt  bootstrap_default_config.yaml  econ-shell.bat  econ.bat  pyproject.toml  rough spec plan.txt  rough_tests_spec.txt  sieve_default_config.yaml
.claude/: active_memory.md  progress.md
.claude/agents/: code-reviewer.md  test-runner.md
.claude/commands/: check-phase.md  new-module.md  refresh.md  run-tests.md  spec-lookup.md
Quarantine/: Untitled.txt
Quarantine/VAULT/: A2.md  Coefficient of Determination as Squared Correlation.md  Frisch-Waugh-Lovell Theorem.md  Interpreting OLS.md  Law of total variance.md  Result E2.md  Untitled.md  projection interpretation of OLS.md  residuals.md
Showing what we can do/reports/: btc_fundamentals_report.tex  cross_section_report.tex  halving_event_study.tex
Showing what we can do/working_space/: 00_STRESS_TEST_FINDINGS.md  01_curate_crypto.py  02_btc_fundamentals.py  03_halving_event_study.py  04_cross_section_and_spillovers.py
VAULT/: A1.md  ANOVA decomposition.md  Assumptions for basic Asymptotics.md  B.md  C1.md  Multilinear Regression.md  NOTE HERE 1THIS COULD BE CLEANER BUT THE EXACT RELATIONSHIP IS UNCLEAR TO ME.md  Result A.md  Result B.md  Result E.md  demeaned.md  geometry of OLS.md
docs/: binary_model_output.md  bootstrap.md  index.md  pub_latex.md  sieve.md
econtools/: __init__.py  __main__.py  _cli_monolith.py  cli.py
scripts/: collect_todos.py  dataverse_fetch.py  generate_fixtures.py
tests/: conftest.py  test_pub_latex.py
(+213 files in other folders)
